feat: Enhance PuzzleColumn with buffer node handling and free slot recommendations
- Added `onRecommendFreeSlot` prop to `PuzzleColumn` for recommending activities in free slots.
- Introduced `isBufferNode` function to identify buffer nodes based on execution status and other criteria.
- Updated business node filtering to exclude buffer nodes.
- Enhanced drag-and-drop functionality to account for buffer and free slot states.
- Modified rendering logic to differentiate between transit, buffer, and free slot nodes.
- Implemented `recommendFreeSlot` function in `useTimelineOperations` to handle free slot recommendations.
- Updated type definitions to include `MobileTabId` and additional properties in `PlanNode` and `ChatMessage`.
- Created `BackendNoticeSink` class for structured logging of notices in the backend.